--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <None Include="README.md" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
